Fixup: vertical alignment for search prompt icons

--- a/src/app/views/search.css
+++ b/src/app/views/search.css
@@ -7,8 +7,7 @@
 }
 
 #search .prompt + span {
-  vertical-align: top;
-  margin-top: 20px;
+  vertical-align: middle;
   margin-left: 2rem;
 }
 
